# rust-data-engineer

./: Cargo.toml  Makefile  README.md
.forgejo/workflows/: lint.yaml  test.yaml
.github/workflows/: lint.yaml  test.yaml
modules/1/: Cargo.toml  Makefile
modules/1/print-data-structure/: Cargo.toml
modules/1/print-data-structure/src/: main.rs
modules/1/src/: main.rs
modules/1/src/calculator/: mod.rs
modules/1/tests/: test_lib.rs
modules/1/vector-fruit-salad/: Cargo.toml
modules/1/vector-fruit-salad/src/: main.rs
